WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
310960
Fix scanEscapedAttributeValue() in HTML fast path parser only processing one character
https://bugs.webkit.org/show_bug.cgi?id=310960
Summary
Fix scanEscapedAttributeValue() in HTML fast path parser only processing one ...
Chris Dumez
Reported
2026-03-28 00:16:56 PDT
Fix scanEscapedAttributeValue() in HTML fast path parser only processing one character.
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2026-03-28 00:19:31 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/61556
EWS
Comment 2
2026-03-30 01:34:04 PDT
Committed
310209@main
(adb5daa54873): <
https://commits.webkit.org/310209@main
> Reviewed commits have been landed. Closing PR #61556 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-03-30 01:35:13 PDT
<
rdar://problem/173673581
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug