Source/WebCore/html/parser/HTMLEntityParser.cpp
@@ -281,14 +281,14 @@ DecodedHTMLEntity consumeHTMLEntity(SegmentedString& source, char16_t additional
     return consumeHTMLEntity(SegmentedStringSource { source }, additionalAllowedCharacter);
 }
 
-DecodedHTMLEntity consumeHTMLEntity(StringParsingBuffer<Latin1Character>& source)
+DecodedHTMLEntity consumeHTMLEntity(StringParsingBuffer<Latin1Character>& source, char16_t additionalAllowedCharacter)
 {
-    return consumeHTMLEntity(StringParsingBufferSource<Latin1Character> { source }, 0);
+    return consumeHTMLEntity(StringParsingBufferSource<Latin1Character> { source }, additionalAllowedCharacter);
 }
 
-DecodedHTMLEntity consumeHTMLEntity(StringParsingBuffer<char16_t>& source)
+DecodedHTMLEntity consumeHTMLEntity(StringParsingBuffer<char16_t>& source, char16_t additionalAllowedCharacter)
 {
-    return consumeHTMLEntity(StringParsingBufferSource<char16_t> { source }, 0);
+    return consumeHTMLEntity(StringParsingBufferSource<char16_t> { source }, additionalAllowedCharacter);
 }
 
 DecodedHTMLEntity decodeNamedHTMLEntityForXMLParser(const char* name)
